# corgi

./: .example.env  .gitignore  Cargo.toml  README.md
migrations/2020-12-18-095939_create_link/: up.sql
src/: api.rs  controller.rs  main.rs  models.rs  route.rs  schema.rs
template/: index.html  shorten.html
template/partial/: base.html
