[package]
name = "corgi"
version = "0.1.0"
authors = ["Ilman Nafian <milmannafian04@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.4.1"
actix-web = "3.3.2"
handlebars = { version = "3.5.1", features = ["dir_source"] }
