[package]
name = "corgi"
version = "0.1.0"
authors = ["Ilman Nafian <milmannafian04@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.4.1"
actix-web = "3.3.2"
chrono = { version = "0.4.19", default-features = false, features = ["clock", "serde", "std"] }
diesel = { version = "1.4.5", features = ["chrono", "postgres", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.8.2"
log = "0.4.11"
rand = "0.8.0"
serde = { version = "1.0.118", features=["derive"] }
tera = "1.5.0"
